Implement Redis caching for user and post data; refactor DTOs to records; enhance Redis configuration and tests